--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:title" content="Hasania Alumni Association" />
   <meta property="og:description"
     content="হাজী মাদবর আলী হাসানিয়া দাখিল মাদ্রাসার  প্রাক্তন ও বর্তমান ছাত্র-ছাত্রীদের মাঝে সেতু বন্ধন সৃষ্টির মধ্য দিয়ে এ কমিউনিকেশন নেটওয়ার্ক-কে অসাধারণ এক উচ্চ মাত্রায় নিয়ে যাওয়ার লক্ষ্য নিয়ে গঠন করা হয়েছে “হাজী মাদবর আলী হাচানিয়া দাখিল মাদ্রাসা অ্যালামনাই অ্যাসোসিয়েশন”" />
-  <meta property="og:image" content="https://i.ibb.co/Kzm5MQZz/punormiloni.jpg" />
+  <meta property="og:image" content="https://res.cloudinary.com/nazim929/image/upload/v1743070406/purnomilonilogo_ivmnw4_-_Post_sj2vy2.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
   <meta property="twitter:title" content="Hasania Alumni Association" />
   <meta property="twitter:description"
     content="হাজী মাদবর আলী হাসানিয়া দাখিল মাদ্রাসার  প্রাক্তন ও বর্তমান ছাত্র-ছাত্রীদের মাঝে সেতু বন্ধন সৃষ্টির মধ্য দিয়ে এ কমিউনিকেশন নেটওয়ার্ক-কে অসাধারণ এক উচ্চ মাত্রায় নিয়ে যাওয়ার লক্ষ্য নিয়ে গঠন করা হয়েছে “হাজী মাদবর আলী হাচানিয়া দাখিল মাদ্রাসা অ্যালামনাই অ্যাসোসিয়েশন”" />
-  <meta property="twitter:image" content="https://i.ibb.co/Kzm5MQZz/punormiloni.jpg" />
+  <meta property="twitter:image" content="https://res.cloudinary.com/nazim929/image/upload/v1743070406/purnomilonilogo_ivmnw4_-_Post_sj2vy2.png" />
   <!--for bangla font-->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap" rel="stylesheet">
 
